--- a/cat.html
+++ b/cat.html
@@ -27,7 +27,7 @@
         Выпадающий список 
       </a> 
       <div class="dropdown-menu"> 
-        <a class="dropdown-item" href="main.html">Главная</a>
+        <a class="dropdown-item" href="index.html">Главная</a>
         <div class="dropdown-divider"></div> 
         <a class="dropdown-item" href="задание 3.1.html">Стихи</a>
         <div class="dropdown-divider"></div> 
