--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         Выпадающий список 
       </a> 
       <div class="dropdown-menu"> 
-        <a class="dropdown-item" href="main.html">Главная</a>
+        <a class="dropdown-item" href="index.html">Главная</a>
         <div class="dropdown-divider"></div> 
         <a class="dropdown-item" href="задание 3.1.html">Стихи</a>
         <div class="dropdown-divider"></div> 
@@ -49,7 +49,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="main.html"><span class="glyphicon glyphicon-star"></span>  Главная</a></li>
+        <li class="active"><a href="index.html"><span class="glyphicon glyphicon-star"></span>  Главная</a></li>
         <li><a href="задание 3.1.html"><span class="glyphicon glyphicon-pencil"></span> Стихи</a></li>
         <li><a href="tabl.html"><span class="glyphicon glyphicon-th"></span> Таблицы</a></li>
       </ul>
