--- a/задание 3.1.html
+++ b/задание 3.1.html
@@ -29,7 +29,7 @@
                     Выпадающий список 
                 </a> 
                 <div class="dropdown-menu"> 
-                    <a class="dropdown-item" href="main.html">Главная</a>
+                    <a class="dropdown-item" href="index.html">Главная</a>
                     <div class="dropdown-divider"></div> 
                     <a class="dropdown-item" href="задание 3.1.html">Стихи</a>
                     <div class="dropdown-divider"></div> 
@@ -50,7 +50,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="main.html"><span class="glyphicon glyphicon-star"></span>  Главная</a></li>
+        <li><a href="index.html"><span class="glyphicon glyphicon-star"></span>  Главная</a></li>
         <li class="active"><a href="задание 3.1.html"><span class="glyphicon glyphicon-pencil"></span> Стихи</a></li>
         <li><a href="tabl.html"><span class="glyphicon glyphicon-th"></span> Таблицы</a></li>
     </ul>
@@ -58,7 +58,7 @@
 </div>
 </nav>
 <ol class="breadcrumb">
-  <li><a href="main.html">Главная</a></li>
+  <li><a href="index.html">Главная</a></li>
   <li  class="active">Стихи</li>
 </ol>
 <div class="row border-row">
